Align pictures to avoid glitch when student name too long

--- a/app/assets/stylesheets/pages/_demoday.scss
+++ b/app/assets/stylesheets/pages/_demoday.scss
@@ -664,7 +664,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     margin-bottom: 20px;
     width: 12.5%;
 
